--- a/1.html
+++ b/1.html
@@ -3,15 +3,26 @@
 <head>
     <title>HakHyeon's HTML practice</title>
     <meta charset="utf-8">
+    <style>
+      a{
+        color:black;
+        text-decoration: none;
+      }
+      h1 {
+        font-size:45px;
+        text-align: center;
+      }
+    </style>
 </head>
 <body>
 <h1><a href="index.html">WEB - HTML</h1></a>
-<u><ul>
-    <li><strong><a href="1.html">1. HTML</a></strong></li>
+<ul>
+    <li><strong><a href="1.html"
+      style="color:blue;text-decoration:underline;">1. HTML</a></strong></li>
     <li><strong><a href="2.html">2. CSS</a></strong></li>
     <li><strong><a href="3.html">3. JavaScript</a></strong></li>
     <li><strong><a href="To Do Thing.html">4. To DO Thing</a></strong></li>
-</ul></u>
+</ul>
 <h2 target="_blank" title="HTML연습(학현)">HTML연습</h2>
 <p style="margin-top:40px;">HTML 이란 Hyper Text Markup Language 의 약자로써
    월드와이드웹 문서를 작성하는 Markup Language 입니다.
