--- a/2.html
+++ b/2.html
@@ -3,15 +3,26 @@
 <head>
     <title>HakHyeon's CSS practice</title>
     <meta charset="utf-8">
+    <style>
+      a{
+        color:black;
+        text-decoration: none;
+      }
+      h1 {
+        font-size:45px;
+        text-align: center;
+      }
+    </style>
 </head>
 <body>
 <h1><a href="index.html">WEB - CSS</h1></a>
-<u><ul>
+<ul>
     <li><strong><a href="1.html">1. HTML</a></strong></li>
-    <li><strong><a href="2.html">2. CSS</a></strong></li>
+    <li><strong><a href="2.html"
+      style="color:blue;text-decoration:underline;">2. CSS</a></strong></li>
     <li><strong><a href="3.html">3. JavaScript</a></strong></li>
     <li><strong><a href="To Do Thing.html">4. To DO Thing</a></strong></li>
-</ul></u>
+</ul>
 <h2 target="_blank" title="HTML연습(학현)">CSS연습</h2>
 <p style="margin-top:40px;">CSS는 Cascading Style Sheet의 약자로 스타일시트라고도 합니다.
   스타일시트는 워드프로세서의 스타일과 마찬가지로 웹문서(html) 작성시
