--- a/3.html
+++ b/3.html
@@ -3,15 +3,26 @@
 <head>
     <title>HakHyeon's JavaScript practice</title>
     <meta charset="utf-8">
+    <style>
+      a{
+        color:black;
+        text-decoration: none;
+      }
+      h1 {
+        font-size:45px;
+        text-align: center;
+      }
+    </style>
 </head>
 <body>
 <h1><a href="index.html">WEB - Javascript</h1></a>
-<u><ul>
+<ul>
     <li><strong><a href="1.html">1. HTML</a></strong></li>
     <li><strong><a href="2.html">2. CSS</a></strong></li>
-    <li><strong><a href="3.html">3. JavaScript</a></strong></li>
+    <li><strong><a href="3.html"
+      style="color:blue;text-decoration:underline;">3. JavaScript</a></strong></li>
     <li><strong><a href="To Do Thing.html">4. To DO Thing</a></strong></li>
-</ul></u>
+</ul>
 <h2 target="_blank" title="HTML연습(학현)">JavaScript연습</h2>
 <p style="margin-top:40px;">자바스크립트를 한마디로 요약하자면
   웹을 풍부하게 만들어주는 작고 가벼운 언어입니다.
