--- a/To do Thing.html
+++ b/To do Thing.html
@@ -1,8 +1,20 @@
 <!doctype.html>
 <html>
 <head>
-  <h1>To Do Thing</h1>
+  <h1 style="color:blue;text-decoration:underline;">To Do Thing</h1>
   <meta charset="utf-8">
+  <style>
+    a{
+      color:black;
+      text-decoration: none;
+    }
+    h1 {
+      font-size:45px;
+      text-align: center;
+    }
+    
+
+  </style>
 </head>
 <body>
   <h2><input type="checkbox">숙제<br></h2>
@@ -37,4 +49,5 @@ s.setAttribute('data-timestamp', +new Date());
 
 <h3><a href="index.html">WEB - HTML</a></h3>
 </body>
+
 </html>
