--- a/index.html
+++ b/index.html
@@ -3,8 +3,40 @@
 <head>
     <title>HakHyeon's Coding practice</title>
     <meta charset="utf-8">
+    <style>
+      a{
+        color:black;
+        text-decoration: none;
+      }
+      h1 {
+        font-size:45px;
+        text-align: center;
+        border-bottom: 1px solid gray;
+        margin:0;
+        padding:20px;
+      }
+      ul{
+        border-right:1px solid gray;
+        width: 130px;
+        margin:0;
+        padding:10px;
+      }
+      body{
+        margin:0;
+
+      }
+    </style>
 </head>
 <body>
+<h1><a href="index.html"
+  style="color:blue; text-decoration:underline;">WEB</h1></a>
+<ul>
+    <li><strong><a href="1.html">1. HTML</a></strong></li>
+    <li><strong><a href="2.html">2. CSS</a></strong></li>
+    <li><strong><a href="3.html">3. JavaScript</a></strong></li>
+    <li><strong><a href="To Do Thing.html">4. To DO Thing</a></strong></li>
+</ul>
+<!--
 <h1><a href="index.html">WEB</h1></a>
 <u><ul>
     <li><strong><a href="1.html">1. HTML</a></strong></li>
@@ -12,7 +44,8 @@
     <li><strong><a href="3.html">3. JavaScript</a></strong></li>
     <li><strong><a href="To Do Thing.html">4. To DO Thing</a></strong></li>
 </ul></u>
-<h2 target="_blank" title="HTML연습(학현)">코딩 연습</h2>
+-->
+<h2 target="_blank" title="코딩연습(학현)">코딩 연습</h2>
 <p style="margin-top:40px;">월드 와이드 웹(World Wide Web)이란 인터넷에
   연결된 사용자들이 서로의 정보를 공유할 수 있는 공간을 의미합니다.
 간단히 줄여서 WWW나 W3라고도 부르며, 간단히 웹(Web)이라고 가장 많이 불립니다.
